[metadata]
name = numformat
version = 0.0.4
author = Sudeep Gowrishankar
author_email = sgowris2@gmail.com
description = A package that helps you format numbers for engineering, scientific, and UI applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sgowris2/numformat
project_urls =
    Bug Tracker = https://github.com/sgowris2/numformat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src